understanding closures with scope

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 </head>
 
 <body>
-    <!-- <script src="./script/example-1.js"></script> -->
-    <!-- <script src="./script/example-2.js"></script> -->
-    <!-- <script src="./script/example-3.js"></script> -->
-    <!-- <script src="./script/example-4.js"></script> -->
-    <!-- <script src="./script/example-5.js"></script> -->
-    <!-- <script src="./script/example-6.js"></script> -->
-    <!-- <script src="./script/example-7.js"></script> -->
+    <script src="./scripts/example-1.js"></script>
+    <!-- <script src="./scripts/example-2.js"></script> -->
+    <!-- <script src="./scripts/example-3.js"></script> -->
+    <!-- <script src="./scripts/example-4.js"></script> -->
+    <!-- <script src="./scripts/example-5.js"></script> -->
+    <!-- <script src="./scripts/example-6.js"></script> -->
+    <!-- <script src="./scripts/example-7.js"></script> -->
 </body>
 
 </html>
